--- a/bower.json
+++ b/bower.json
@@ -20,12 +20,12 @@
     "test"
   ],
   "dependencies": {
+    "jquery": "~2.1.1",
     "backbone": "~1.1.2"
   },
   "devDependencies": {
     "qunit": "~1.15.0",
     "backbone-faux-server": "~0.10.4",
-    "backbone-relational": "~0.8.8",
-    "jquery": "~2.1.1"
+    "backbone-relational": "~0.8.8"
   }
 }
