--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backbone-localcache",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "backbone-localcache.js",
   "devDependencies": {
     "bower": "~1.3.12"
   },
