--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
-    "backbone": "~1.1.2"
+    "backbone": "~1.1.2",
+    "backbone-super": "~1.0.2"
   },
   "devDependencies": {
     "qunit": "~1.15.0",
