--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "backbone-local-cache.js",
   "scripts": {
     "install": "bower install",
-    "test": "./node_modules/karma/bin/karma start --single-run"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
@@ -24,10 +24,16 @@
   },
   "homepage": "https://github.com/khamaileon/backbone-local-cache",
   "devDependencies": {
+    "body-parser": "^1.9.2",
+    "express": "^4.10.1",
+    "grunt": "^0.4.5",
+    "grunt-karma": "^0.9.0",
+    "grunt-run": "^0.2.4",
     "karma": "^0.12.24",
     "karma-chrome-launcher": "^0.1.5",
     "karma-firefox-launcher": "^0.1.3",
     "karma-qunit": "^0.1.4",
+    "lodash": "^2.4.1",
     "qunitjs": "^1.15.0"
   }
 }
