--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/khamaileon/backbone-local-cache",
   "devDependencies": {
     "body-parser": "^1.9.2",
+    "cors": "^2.5.2",
     "express": "^4.10.1",
     "grunt": "^0.4.5",
     "grunt-karma": "^0.9.0",
