--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,6 @@
     "backbone": "~1.1.2"
   },
   "devDependencies": {
-    "qunit": "~1.15.0",
-    "backbone-relational": "~0.8.8"
+    "qunit": "~1.15.0"
   }
 }
